Fixed bunch of issues